--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     }
   ],
   "require": {
-    "php": "^7.3|^8.0",
+    "php": "^8.0",
     "islenbo/aliyun-log-php-sdk": "^1.1",
-    "laravel/framework": "^8.0|^9.0",
+    "laravel/framework": "^9.0|^10.0",
     "ext-json": "*"
   }
 }
